# sfmapi_instantsfm

./: .gitignore  .gitmodules  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml  release.yml
src/sfmapi_instantsfm/: __init__.py  api_launcher.py  backend.py  plugin.py  server.py
tests/: test_api_launcher.py  test_backend_actions.py  test_plugin.py  test_sfmapi_http_discovery.py
