[project]
name = "sfmapi-instantsfm"
version = "0.1.0"
description = "sfmapi backend-action wrapper for InstantSfM"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.12,<3.13"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]
mcp = [
    "fastmcp==3.2.4",
]

[project.scripts]
sfmapi-instantsfm-api = "sfmapi_instantsfm.api_launcher:main"
sfmapi-instantsfm-info = "sfmapi_instantsfm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sfmapi_instantsfm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PT", "RUF"]
ignore = ["E501"]
